Infra/k8s/auth-depl-ClusterIP.yaml
apiVersion: v1
kind: Service 
metadata:
  name: auth-srv
spec: 
  selector:
     app: auth
  ports: 
    - name: auth
      protocol: TCP 
      port: 3000 
      targetPort: 3000
