Infra/k8s/nats-ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
  - name : 'client'
    protocol: TCP
    port: 4222
    targetPort: 4222
  - name : monitoring
    protocol: TCP 
    port : 8222
    targetPort : 8222
