Infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
   kubernetes.io/ingress.class : nginx
   nginx.ingress.kubernetes.io/use-regex : 'true'
spec: 
  rules:
   - host : ticketing.dev
     http:
      paths:
       - path: /api/users/?(.*)
         pathType: Prefix
         backend : 
           service:
                name: auth-srv
                port:
                  number: 3000
       - path: /api/tickets/?(.*)
         pathType: Prefix
         backend : 
           service:
                name: tickets-srv
                port:
                  number: 3000
